discord section mobile fix 3

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -336,7 +336,7 @@ html {
     }
     .bodytext {
         margin: 5rem;
-        width: 30%;
+        width: 60%;
         h1 {
             margin: auto;
             color: rgb(255, 255, 255);
